@@ -1,4 +1,4 @@
-SETools - Policy analysis tools for SELinux (C) 2001-2007
+SETools - Policy analysis tools for SELinux (C) 2001-2008
 Tresys Technology
 setools@tresys.com, http://oss.tresys.com/projects/setools
 
