@@ -5,41 +5,24 @@ AC_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE([-Wno-portability])
 
 dnl *** update these variables as versions change; also update AC_INIT ***
+
+libqpol_soversion=1
 libqpol_version=1.3.1
-libqpol_soname=libqpol.so.1
-libqpol_pyswig_soname=_qpol.so.1
-libqpol_jswig_soname=libjqpol.so.1
-libqpol_tswig_soname=libtqpol.so.1
 
+libapol_soversion=4
 libapol_version=4.2
-libapol_soname=libapol.so.4
-libapol_pyswig_soname=_apol.so.4
-libapol_jswig_soname=libjapol.so.4
-libapol_tswig_soname=libtapol.so.4
 
+libpoldiff_soversion=1
 libpoldiff_version=1.4
-libpoldiff_soname=libpoldiff.so.1
-libpoldiff_pyswig_soname=_poldiff.so.1
-libpoldiff_jswig_soname=libjpoldiff.so.1
-libpoldiff_tswig_soname=libtpoldiff.so.1
 
+libpolsearch_soversion=1
 libpolsearch_version=1.0
-libpolsearch_soname=libpolsearch.so.1
-libpolsearch_pyswig_soname=_polsearch.so.1
-libpolsearch_jswig_soname=libjpolsearch.so.1
-libpolsearch_tswig_soname=libtpolsearch.so.1
 
+libsefs_soversion=4
 libsefs_version=4.0.2
-libsefs_soname=libsefs.so.4
-libsefs_pyswig_soname=_sefs.so.4
-libsefs_jswig_soname=libjsefs.so.4
-libsefs_tswig_soname=libtsefs.so.4
 
+libseaudit_soversion=4
 libseaudit_version=4.3
-libseaudit_soname=libseaudit.so.4
-libseaudit_pyswig_soname=_seaudit.so.4
-libseaudit_jswig_soname=libjseaudit.so.4
-libseaudit_tswig_soname=libtseaudit.so.4
 
 sechecker_version=2.0
 
@@ -52,6 +35,36 @@ version_min_sepol_minor=12
 version_min_sepol_patch=27
 
 dnl *** end of tunable values ***
+
+libqpol_soname=libqpol.so.${libqpol_soversion}
+libqpol_pyswig_soname=_qpol.so.${libqpol_soversion}
+libqpol_jswig_soname=libjqpol.so.${libqpol_soversion}
+libqpol_tswig_soname=libtqpol.so.${libqpol_soversion}
+
+libapol_soname=libapol.so.${libapol_soversion}
+libapol_pyswig_soname=_apol.so.${libapol_soversion}
+libapol_jswig_soname=libjapol.so.${libapol_soversion}
+libapol_tswig_soname=libtapol.so.${libapol_soversion}
+
+libpoldiff_soname=libpoldiff.so.${libpoldiff_soversion}
+libpoldiff_pyswig_soname=_poldiff.so.${libpoldiff_soversion}
+libpoldiff_jswig_soname=libjpoldiff.so.${libpoldiff_soversion}
+libpoldiff_tswig_soname=libtpoldiff.so.${libpoldiff_soversion}
+
+libpolsearch_soname=libpolsearch.so.${libpolsearch_soversion}
+libpolsearch_pyswig_soname=_polsearch.so.${libpolsearch_soversion}
+libpolsearch_jswig_soname=libjpolsearch.so.${libpolsearch_soversion}
+libpolsearch_tswig_soname=libtpolsearch.so.${libpolsearch_soversion}
+
+libsefs_soname=libsefs.so.${libsefs_soversion}
+libsefs_pyswig_soname=_sefs.so.${libsefs_soversion}
+libsefs_jswig_soname=libjsefs.so.${libsefs_soversion}
+libsefs_tswig_soname=libtsefs.so.${libsefs_soversion}
+
+libseaudit_soname=libseaudit.so.${libseaudit_soversion}
+libseaudit_pyswig_soname=_seaudit.so.${libseaudit_soversion}
+libseaudit_jswig_soname=libjseaudit.so.${libseaudit_soversion}
+libseaudit_tswig_soname=libtseaudit.so.${libseaudit_soversion}
 
 AC_GNU_SOURCE
 AC_PROG_CC_C99
@@ -607,6 +620,9 @@ else
   sepol_new_expand_boolmap="no"
 fi
 
+dnl check for modified AV tab behavior, introduced in libsepol version 2.0.20
+AC_CHECK_DECL([avtab_alloc], sepol_new_avtab="yes", sepol_new_avtab="no", [#include <sepol/policydb/conditional.h>])
+
 AC_RUN_IFELSE(
    [AC_LANG_SOURCE([
 #include <sepol/policydb/policydb.h>
@@ -797,31 +813,37 @@ sechecker_modules_dir='${setoolslibdir}/sechecker'
 AC_SUBST(VERSION)
 AC_SUBST(javadir)
 AC_SUBST(sepol_srcdir)
+AC_SUBST(libqpol_soversion)
 AC_SUBST(libqpol_version)
 AC_SUBST(libqpol_soname)
 AC_SUBST(libqpol_pyswig_soname)
 AC_SUBST(libqpol_jswig_soname)
 AC_SUBST(libqpol_tswig_soname)
+AC_SUBST(libapol_soversion)
 AC_SUBST(libapol_version)
 AC_SUBST(libapol_soname)
 AC_SUBST(libapol_pyswig_soname)
 AC_SUBST(libapol_jswig_soname)
 AC_SUBST(libapol_tswig_soname)
+AC_SUBST(libpoldiff_soversion)
 AC_SUBST(libpoldiff_version)
 AC_SUBST(libpoldiff_soname)
 AC_SUBST(libpoldiff_pyswig_soname)
 AC_SUBST(libpoldiff_jswig_soname)
 AC_SUBST(libpoldiff_tswig_soname)
+AC_SUBST(libpolsearch_soversion)
 AC_SUBST(libpolsearch_version)
 AC_SUBST(libpolsearch_soname)
 AC_SUBST(libpolsearch_pyswig_soname)
 AC_SUBST(libpolsearch_jswig_soname)
 AC_SUBST(libpolsearch_tswig_soname)
+AC_SUBST(libsefs_soversion)
 AC_SUBST(libsefs_version)
 AC_SUBST(libsefs_soname)
 AC_SUBST(libsefs_pyswig_soname)
 AC_SUBST(libsefs_jswig_soname)
 AC_SUBST(libsefs_tswig_soname)
+AC_SUBST(libseaudit_soversion)
 AC_SUBST(libseaudit_version)
 AC_SUBST(libseaudit_soname)
 AC_SUBST(libseaudit_pyswig_soname)
@@ -847,7 +869,9 @@ if test ${sepol_new_defines} != "yes" ; then
    AC_DEFINE(SEPOL_ENOMEM, HASHTAB_OVERFLOW, [remap of libsepol 1.x.x define to 2.x.x])
    AC_DEFINE(SEPOL_EEXIST, HASHTAB_PRESENT, [remap of libsepol 1.x.x define to 2.x.x])
 fi
-
+if test ${sepol_new_avtab} == "yes"; then
+   AC_DEFINE(SEPOL_DYNAMIC_AVTAB, 1, [if avtab sizes are calculated dynamically by loader or are hardcoded])
+fi
 if test ${sepol_new_expand_boolmap} == "yes" ; then
    AC_DEFINE(HAVE_SEPOL_BOOLMAP, 1, [sepol's new expand boolmap behavior])
 fi
