@@ -2,7 +2,7 @@ Source: setools
 Priority: optional
 Maintainer: J. Tang <jtang@tresys.com>
 Build-Depends: debhelper (>= 5), autotools-dev, libstdc++-dev, pkg-config,
- libselinux1-dev (>= 1.30), libsepol1-dev (>= 1.13),
+ libselinux1-dev (>= 1.30), libsepol1-dev (>= 2.0.20),
  libxml2-dev, libsqlite3-dev (>= 3.2),
  swig (>= 1.3.28), python-dev (>= 2.3), python-central, java-compiler,
  tcl8.4-dev (>= 8.4.9) | tcl-dev (>= 8.4.9), tcllib,
