@@ -48,7 +48,7 @@ Group: System Environment/Libraries
 Requires: libselinux >= %{selinux_ver} libsepol >= %{sepol_ver} sqlite >= %{sqlite_ver}
 BuildRequires: flex bison pkgconfig
 BuildRequires: glibc-devel libstdc++-devel gcc gcc-c++
-BuildRequires: libselinux-devel >= %{selinux_ver} libsepol-devel >= %{sepol_ver}
+BuildRequires: libselinux-devel >= %{selinux_ver} libsepol-devel >= %{sepol_ver} libsepol-static >= %{sepol_ver}
 BuildRequires: sqlite-devel >= %{sqlite_ver} libxml2-devel
 BuildRequires: autoconf >= %{autoconf_ver} automake
 
