@@ -1,3 +1,9 @@
+2008-02-15  J. Tang  <jtang@tresys.com>
+
+	* Synced libqpol to libsepol version 2.0.20.  The configure script
+	will check if dynamic avtabs exist (introduced in libsepol 2.0.20)
+	and will adjust policy loading as necessary.
+
 2008-01-09  J. Tang  <jtang@tresys.com>
 
 	* Added initial attempt at Debian-izing SETools.  The Debian
